fixed issue where overlapping menu prevented link click on main text

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -5,7 +5,7 @@ $titlebar-height: 56px;
 $map-width: 320px;
 $layer-map-width: 376px;
 $content-max-width: 1040px;
-$anchor-list-max-width: calc(100% / 3);
+$anchor-list-max-width: 320px;
 $max-width-grid: 1280px;
 $nav-padding: 18px;
 $sankey-x-margin: 30px;
