--- a/styles/layouts/l-FAQ.scss
+++ b/styles/layouts/l-FAQ.scss
@@ -29,7 +29,7 @@
 
     > .content {
       max-width: $content-max-width;
-      margin: 0 0 0 $anchor-list-max-width;
+      margin: 0 0 0 $anchor-list-max-width + 10px;
 
       h2.-anchor::before {
         content:"";
