--- a/styles/layouts/l-data-methods.scss
+++ b/styles/layouts/l-data-methods.scss
@@ -24,7 +24,7 @@
 
     > .content {
       max-width: $content-max-width;
-      margin: 0 0 0 $anchor-list-max-width;
+      margin: 0 0 0 $anchor-list-max-width + 10px;
 
       h2.-anchor::before {
         content:"";
